--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.5
   sqflite: ^2.4.2
   intl: ^0.20.2
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
